--- a/app/less/forms.less
+++ b/app/less/forms.less
@@ -792,9 +792,9 @@ input[type="text"], textarea {
 
 #locationSelectionInput {
 
-  &::-webkit-input-placeholder { padding-top: 30px !important; }
-  &::-moz-placeholder { padding-top: 30px !important; }
-  &:-ms-input-placeholder {  padding-top: 30px !important; }
+  &::-webkit-input-placeholder { padding-top: 29px !important; }
+  &::-moz-placeholder { padding-top: 29px !important; }
+  &:-ms-input-placeholder {  padding-top: 29px !important; }
 
 }
 
